# great-lakes-bird-station

./: .gitignore  README.md  pyproject.toml  setup.sh
birdstation/: config.py  db.py  export.py  ingest.py
dashboard/: package.json
dashboard/pages/: index.md
dashboard/sources/birds/: connection.yaml  detections.sql
docs/superpowers/plans/: 2026-04-18-nuc-pipeline.md
docs/superpowers/specs/: 2026-04-18-birdstation-design.md
scripts/: record.sh
systemd/: birdstation-analyze.service  birdstation-analyze.timer  birdstation-export.service  birdstation-export.timer  birdstation-record.service
